--- a/templates/Dockerfile-rpm.tmpl
+++ b/templates/Dockerfile-rpm.tmpl
@@ -2,11 +2,24 @@
 FROM %%os%%:%%release%%
 
 # FIXME: Hack around docker/docker#10180
-RUN ( yum install -y yum-plugin-ovl || yum install -y yum-plugin-ovl ) \
+RUN ( yum install -y yum-plugin-ovl || yum install -y yum-plugin-ovl || touch /var/lib/rpm/* ) \
     && yum clean all
 
+# FIXME: make sure ol7_developer repo is available
+# see https://oracle-base.com/articles/linux/download-the-latest-oracle-linux-repo-file#oracle-linux-7-updated
+RUN [[ %%os%% != oraclelinux ]] || [[ %%release%% != 7 ]] || ( \
+        pushd /etc/yum.repos.d/ \
+        && rm -f * \
+        && curl -O http://yum.oracle.com/public-yum-ol7.repo \
+        && popd \
+        && yum-config-manager --enable \
+            ol7_software_collections \
+            ol7_developer \
+            ol7_developer_EPEL \
+        && yum clean all ) 
+
 # install build tools and PostgreSQL development files
-RUN yum install -y centos-release-scl-rh epel-release \
+RUN ( [[ -z "%%extra-repositories%%" ]] || yum install -y %%extra-repositories%%) \
     && yum groupinstall -y 'Development Tools' \
     && yum install -y \
         curl \
@@ -17,8 +30,6 @@ RUN yum install -y centos-release-scl-rh epel-release \
         libicu-devel \
         libxml2-devel \
         libxslt-devel \
-        llvm-toolset-7-clang \
-        llvm5.0 \
         openssl-devel \
         pam-devel \
         readline-devel \
@@ -26,8 +37,10 @@ RUN yum install -y centos-release-scl-rh epel-release \
         rpmlint \
         spectool \
         tar \
-    && yum install -y %%rpm_url%% \
-    && yum install -y postgresql%%pgshort%%-devel \
+        %%extra-packages%% \
+    && yum install -y https://%%rpm_url%% \
+    && ( [[ %%release%% < 8 ]] || dnf -qy module disable postgresql ) \
+    && yum install -y postgresql%%pgshort%%-server postgresql%%pgshort%%-devel \
     && yum clean all
 
 # install jq to process JSON API responses
