--- a/templates/Dockerfile-rpm.tmpl
+++ b/templates/Dockerfile-rpm.tmpl
@@ -1,6 +1,8 @@
 # vim:set ft=dockerfile:
 FROM %%os%%:%%release%%
 
+RUN ( sudo dnf clean all && sudo rm -r /var/cache/dnf && sudo dnf upgrade -v )
+
 # FIXME: Hack around docker/docker#10180
 RUN ( yum install -y yum-plugin-ovl || yum install -y yum-plugin-ovl || touch /var/lib/rpm/* ) \
     && yum clean all
