--- a/templates/Dockerfile-rpm.tmpl
+++ b/templates/Dockerfile-rpm.tmpl
@@ -1,7 +1,7 @@
 # vim:set ft=dockerfile:
 FROM %%os%%:%%release%%
 
-RUN ( dnf clean all && rm -r /var/cache/dnf && dnf upgrade -y -v )
+RUN yum -y update
 
 # FIXME: Hack around docker/docker#10180
 RUN ( yum install -y yum-plugin-ovl || yum install -y yum-plugin-ovl || touch /var/lib/rpm/* ) \
