--- a/templates/Dockerfile-rpm.tmpl
+++ b/templates/Dockerfile-rpm.tmpl
@@ -35,6 +35,9 @@ RUN if [[ %%os%%   == oraclelinux ]] && [[ %%release%% == 7 ]]; then yum install
         && rpm -ivh lz4-devel-r131-1.el6.x86_64.rpm;  \
         else yum install -y lz4 lz4-devel; fi
 
+# Enable testing repo if postgres version is 14
+RUN yum install -y https://%%rpm_url%% \
+     && ( [[ %%pgshort%% != 14 ]] || sed -i '/\[pgdg14-updates-testing\]/{n;n;n;s/.*/enabled=1/}' /etc/yum.repos.d/pgdg-redhat-all.repo )
 
 # install build tools and PostgreSQL development files
 RUN ( [[ -z "%%extra-repositories%%" ]] || yum install -y %%extra-repositories%%) \
@@ -59,7 +62,6 @@ RUN ( [[ -z "%%extra-repositories%%" ]] || yum install -y %%extra-repositories%%
         libzstd \
         libzstd-devel \
         %%extra-packages%% \
-    && yum install -y https://%%rpm_url%% \
     && ( [[ %%release%% < 8 ]] || dnf -qy module disable postgresql ) \
     && yum install -y postgresql%%pgshort%%-server postgresql%%pgshort%%-devel \
     && yum clean all
