--- a/templates/Dockerfile-rpm.tmpl
+++ b/templates/Dockerfile-rpm.tmpl
@@ -8,6 +8,10 @@ RUN [[ %%os%% != centos ]] || [[ %%release%% != 8 ]] || ( \
 
 RUN yum -y update
 
+# FIXME: Hack around docker/docker#10180
+RUN ( yum install -y yum-plugin-ovl || yum install -y yum-plugin-ovl || touch /var/lib/rpm/* ) \
+    && yum clean all
+
 # Enable some other repos for some dependencies in OL/7 
 # see https://yum.oracle.com/getting-started.html#installing-from-oracle-linux-yum-server
 RUN [[ %%os%% != oraclelinux ]] || [[ %%release%% != 7 ]] || ( \
