--- a/templates/Dockerfile-deb.tmpl
+++ b/templates/Dockerfile-deb.tmpl
@@ -71,6 +71,7 @@ RUN echo 'deb http://apt.postgresql.org/pub/repos/apt/ %%release%%-pgdg main' > 
         liblz4-1 \
         libzstd1 \
         libzstd-dev \
+        sudo \
     && rm -rf /var/lib/apt/lists/*
 
 RUN pip3 install sphinx
