Fixes review comments

--- a/templates/Dockerfile-rpm.tmpl
+++ b/templates/Dockerfile-rpm.tmpl
@@ -43,7 +43,7 @@ RUN if [[ %%os%%   == oraclelinux ]] && [[ %%release%% == 7 ]]; then yum install
 
 # install build tools and PostgreSQL development files
 RUN ( yum install -y https://%%rpm_url%%  \
-    && ( [[ %%pgshort%% != 15 ]] || sed -i '/\[pgdg15-updates-testing\]/{n;n;n;s/.*/enabled=1/}' /etc/yum.repos.d/pgdg-redhat-all.repo ) \
+    && ( [[ %%pgshort%% != 15 ]] || yum-config-manager --enable pgdg15-updates-testing ) \
     && [[ -z "%%extra-repositories%%" ]] || yum install -y %%extra-repositories%%) \
     && yum groupinstall -y 'Development Tools' \
     && yum install -y \
