--- a/templates/Dockerfile-deb.tmpl
+++ b/templates/Dockerfile-deb.tmpl
@@ -90,12 +90,11 @@ RUN curl -s https://packagecloud.io/install/repositories/citusdata/community/scr
 COPY make_pg_buildext_parallel.patch /
 RUN patch `which pg_buildext` < /make_pg_buildext_parallel.patch
 
-# Added for pg15 beta package support. Without this pg_buildext gives below error
+# Added for pg15 beta package support.
 ENV DEB_PG_SUPPORTED_VERSIONS="10 11 12 13 14 15"
 
 # place scripts on path and declare output volume
 ENV PATH /scripts:$PATH
-
 COPY scripts /scripts
 VOLUME /packages
 
