--- a/templates/Dockerfile-rpm.tmpl
+++ b/templates/Dockerfile-rpm.tmpl
@@ -46,7 +46,6 @@ RUN ( yum install -y https://%%rpm_url%%  \
     && [[ -z "%%extra-repositories%%" ]] || yum install -y %%extra-repositories%%) \
     && yum groupinstall -y 'Development Tools' \
     && yum install -y \
-        curl \
         flex \
         gcc-c++ \
         hunspell-en \
@@ -60,12 +59,11 @@ RUN ( yum install -y https://%%rpm_url%%  \
         readline-devel \
         rpm-build \
         rpmlint \
-        spectool \
         tar \
         libzstd \
         libzstd-devel \
         %%extra-packages%% \
-    && ( [[ %%release%% < 8 ]] || dnf -qy module disable postgresql ) \
+    && ( [[ %%release%% != 8 ]] || dnf -qy module disable postgresql ) \
     && yum install -y postgresql%%pgshort%%-server postgresql%%pgshort%%-devel \
     && yum clean all
 
