Adds python installations in Docker files

--- a/templates/Dockerfile-rpm.tmpl
+++ b/templates/Dockerfile-rpm.tmpl
@@ -112,7 +112,7 @@ RUN !( ( [ %%os%% = centos ] && [ %%release%% = 7 ] ) || \
        ( [ %%os%% = oraclelinux ] && [ %%release%% = 7 ] ) || \
        ( [ %%os%% = oraclelinux ] && [ %%release%% = 8 ] ) \
      ) || ( \
-        wget https://www.python.org/ftp/python/3.8.12/Python-3.8.12.tar.xz && \
+        curl -O https://www.python.org/ftp/python/3.8.12/Python-3.8.12.tar.xz && \
         tar -xvf Python-3.8.12.tar.xz && \
         cd Python-3.8.12 && \
         ./configure --enable-optimizations && \
