--- a/templates/Dockerfile-rpm.tmpl
+++ b/templates/Dockerfile-rpm.tmpl
@@ -112,7 +112,9 @@ RUN !( ( [ %%os%% = centos ] && [ %%release%% = 7 ] ) || \
        ( [ %%os%% = oraclelinux ] && [ %%release%% = 7 ] ) || \
        ( [ %%os%% = oraclelinux ] && [ %%release%% = 8 ] ) \
      ) || ( \
-        yum -y install bzip2-devel libffi-devel xz-devel
+        yum -y install  bzip2-devel \
+                        libffi-devel
+                        xz-devel \
         curl -O https://www.python.org/ftp/python/3.8.16/Python-3.8.16.tar.xz && \
         tar -xvf Python-3.8.16.tar.xz && \
         cd Python-3.8.16 && \
