Fixes installation of python3.8

--- a/templates/Dockerfile-rpm.tmpl
+++ b/templates/Dockerfile-rpm.tmpl
@@ -114,7 +114,7 @@ RUN !( ( [ %%os%% = centos ] && [ %%release%% = 7 ] ) || \
      ) || ( \
         yum -y install  bzip2-devel \
                         libffi-devel \
-                        xz-devel \
+                        xz-devel && \
         curl -O https://www.python.org/ftp/python/3.8.16/Python-3.8.16.tar.xz && \
         tar -xvf Python-3.8.16.tar.xz && \
         cd Python-3.8.16 && \
