--- a/templates/Dockerfile-rpm.tmpl
+++ b/templates/Dockerfile-rpm.tmpl
@@ -111,7 +111,7 @@ RUN [[ %%os%% != centos ]] || [[ %%release%% != 7 ]] || ( \
 ARG PYTHON_VERSION=3.8.16
 RUN set -ex \
     && curl -L https://github.com/pyenv/pyenv-installer/raw/master/bin/pyenv-installer | bash \
-    && export PYENV_ROOT="$HOME/.pyenv" && export PATH="$PYENV_ROOT/bin:$PATH" \
+    && export PATH="$HOME/.pyenv/bin:$PATH" \
     && pyenv update \
     && pyenv install $PYTHON_VERSION \
     && pyenv global $PYTHON_VERSION \
