--- a/templates/Dockerfile-rpm.tmpl
+++ b/templates/Dockerfile-rpm.tmpl
@@ -10,14 +10,16 @@ RUN [[ %%os%% != centos ]] || [[ %%release%% != 8 ]] || ( \
 RUN yum -y update
 
 RUN  [[ %%release%% != 8 ]] || ( \
+    dnf config-manager --add-repo=https://dl.fedoraproject.org/pub/epel/epel-release-latest-8.noarch.rpm \
     dnf install epel-release -y && \
     dnf --enablerepo=crb install -y \
         perl-IPC-Run \
     )
 
 RUN  [[ %%release%% != 9 ]] || ( \
+
     dnf install epel-release -y && \
-    dnf --enablerepo=crb install -y \
+    dnf install -y \
         perl-IPC-Run \
     )
 
