--- a/templates/Dockerfile-rpm.tmpl
+++ b/templates/Dockerfile-rpm.tmpl
@@ -17,7 +17,7 @@ RUN  [[ %%release%% != 8 ]] || ( \
     )
 
 RUN  [[ %%release%% != 9 ]] || ( \
-    dnf install -y gcc make perl-devel && \
+    dnf install -y gcc make perl-devel perl-App-cpanminus && \
     cpan IPC::Run \
     )
 
