--- a/templates/Dockerfile-rpm.tmpl
+++ b/templates/Dockerfile-rpm.tmpl
@@ -8,6 +8,7 @@ RUN [[ %%os%% != centos ]] || [[ %%release%% != 8 ]] || ( \
 RUN yum -y update
 
 RUN  [[ %%release%% != 8 ]] || ( \
+    dnf install epel-release -y && \
     dnf -y install dnf-plugins-core && \
     dnf repolist && \
     dnf config-manager --enable epel && \
