--- a/templates/Dockerfile-rpm.tmpl
+++ b/templates/Dockerfile-rpm.tmpl
@@ -17,7 +17,7 @@ RUN  [[ %%release%% != 8 ]] || ( \
     dnf --enablerepo=powertools install -y perl-IPC-Run \
     )
 
-RUN  [[ %%os%% != almalinux ]] || [[ %%release%% != 9 ]] || ( \
+RUN  [[ %%os%% != almalinux ]] [[ %%release%% != 9 ]] || ( \
     dnf install epel-release -y && \
     dnf -y install dnf-plugins-core && \
     dnf config-manager --enable epel && \
