--- a/templates/Dockerfile-rpm.tmpl
+++ b/templates/Dockerfile-rpm.tmpl
@@ -98,6 +98,8 @@ RUN ( yum install -y https://%%rpm_url%%  \
         tar \
         libzstd \
         libzstd-devel \
+        python3-pip \
+        python3-devel \
         %%extra-packages%% \
     && ( [[ %%release%% != 8 ]] || dnf -qy module disable postgresql ) \
     && yum install -y postgresql%%pgshort%%-server postgresql%%pgshort%%-devel \
